# gimp-plugin-blood-splatter-angle-estimator

./: CMakeLists.txt  README.md  main.cpp  main.h  plugin_ui.cpp  plugin_ui.h
BloodSplatterAngleEstimator/: BloodSplatterAngleEstimator.cpp  BloodSplatterAngleEstimator.h  CMakeLists.txt  Helpers.cpp  Helpers.h  OptimaFinder.cpp  OptimaFinder.h  Parameters.cpp  Parameters.h
cmake/: FindGIMP.cmake
